--- a/wunderkarte.tex
+++ b/wunderkarte.tex
@@ -1,5 +1,5 @@
 \documentclass[10pt,a4paper]{article}
-\usepackage[paperheight=24.8in]{geometry}
+\usepackage[paperheight=9.4in]{geometry}
 % Nice color names
 \usepackage[usenames,dvipsnames]{xcolor}
 % Font encoding of the custom font
@@ -22,17 +22,17 @@
 \vsp{-.3}
 \wunder{A \blue{beautiful} minimalistic style}
 \vsp{-.8}
-\wunder{Long \blue{stretching}}
+\wunder{long \blue{stretching}}
 \vsp{-.5}
-\wunder{Typography}
-\wunder{That also works \blue{well} on}
+\wunder{typography}
+\wunder{that also works \blue{well} on}
 \wunder{BIG LETTERS}
-\wunder{\blue{All} over the \blue{entire} line!}
+\wunder{\blue{all} over the \blue{entire} line!}
 \vsp{-.4}
-\wunder{With fine tuning of}
+\wunder{with fine tuning of}
 \vsp{-.5}
-\wunder{\blue{Vertical} Space}
+\wunder{\blue{vertical} Space}
 \vsp{-.6}
-\wunder{Presented by the \blue{\LaTeX}}
-\wunder{\blue{Typesetting} system}
+\wunder{at disposal to \blue{your} very}
+\wunder{\blue{imagination}}
 \end{document}
